# BeMyGest

./: .gitignore  BeMyGest.sln  CMakeLists.txt  README.md  paths.props
Common/: CMakeLists.txt
Common/src/: GlueGL.cpp
DrumMachine/: CMakeLists.txt  DrumMachine.vcxproj  DrumMachine.vcxproj.filters
DrumMachine/src/: DrumMachine.cpp  DrumMachine.h  DrummerTracker.cpp  DrummerTracker.h  HumanTracker.cpp  HumanTracker.h  MotionDevice.cpp  MotionDevice.h  Util.cpp  Util.h  main.cpp
Electricus/: CMakeLists.txt  Electricus.vcxproj  Electricus.vcxproj.filters
Electricus/resource/map/: 1.txt  2.txt
Electricus/src/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  GFX.cpp  GFX.h  GameMgr.cpp  GameMgr.h  GfxLoader.cpp  GfxLoader.h  Log.h  Map.cpp  Map.h  MapFile.cpp  MapFile.h  Player.cpp  Player.h  Seashell.cpp  Seashell.h  Starfish.cpp  Starfish.h  global.h  main.cpp
Electricus/src/Xtion/: OpenNiUtil.h
Example_DisplayRawData/: Example_DisplayRawData.vcxproj  Example_DisplayRawData.vcxproj.filters
Example_DisplayRawData/src/: GlueGL.cpp  GlueGL.h  OpenNiUtil.h  main.cpp
NiSimpleViewer/: NiSimpleViewer.vcxproj  NiSimpleViewer.vcxproj.filters
NiSimpleViewer/src/: NiSimpleViewer.cpp  main.cpp
Samples_OpenNI_Cpp/: paths.props
Samples_OpenNI_Cpp/Common/: Common.vcxproj  Common.vcxproj.filters
Samples_OpenNI_Cpp/Common/src/: GlueGL.cpp  GlueGL.h
Samples_OpenNI_Cpp/DisplayRawData/: CMakeLists.txt  DisplayRawData.vcxproj  DisplayRawData.vcxproj.filters  Example_DisplayRawData.vcxproj
Samples_OpenNI_Cpp/DisplayRawData/src/: main.cpp
Samples_OpenNI_Cpp/TrackHand/: CMakeLists.txt  TrackHand.vcxproj
Samples_OpenNI_Cpp/TrackHand/src/: main.cpp
Samples_OpenNI_Cpp/TrackHuman/: CMakeLists.txt  TrackHuman.vcxproj
Samples_OpenNI_Cpp/TrackHuman/src/: main.cpp
Samples_OpenNI_Processing/rainbow_hands/: rainbow_hands.pde
SoundBoard/: CMakeLists.txt  SoundBoard.vcxproj  SoundBoard.vcxproj.filters
SoundBoard/dep/: GlueGL.h
SoundBoard/resource/: got.bmg
SoundBoard/resource/free/: cat.txt
SoundBoard/resource/moving/: canon.txt  cat.txt  dir_test_3.txt  move.txt  test.txt
SoundBoard/resource/musicFiles/: move.txt  test.txt
SoundBoard/src/: AbstractArea.cpp  AbstractArea.h  AbstractProvider.cpp  AbstractProvider.h  AreaBuilder.h  AreaManager.cpp  AreaManager.h  Button.cpp  ColorMap.h  FallingBlockGame.cpp  FallingBlocksGame.h  FallingMusicBlockFactory.cpp  FallingMusicBlockFactory.h  FileParser.cpp  FileParser.h  FreePlayingGame.cpp  FreePlayingGame.h  GameScreen.h  GameScreenID.h  GameScreenMgr.h  LevelSelectScreen.cpp  LevelSelectScreen.h  MenuScreen.cpp  MenuScreen.h  MovingArea.cpp  MusicBlock.h  MusicBlockFactory.h  MusicBlockParser.h  MusicBlocksProvider.cpp  MusicBlocksProvider.h  MusicFileConfig.cpp  MusicFileConfig.h  MusicNote.cpp  MusicNote.h  ResourceManager.cpp  ResourceManager.h  ShapeUtils.h  SimpleArea.cpp  SimpleFileParser.cpp  SimpleFileParser.h  (+18 more)
